[workspace]
resolver = "2"

members = [
    "contract_a_interface",
    "contract_a",
    "contract_b",
    "token"
]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0-rc2" }
soroban-token-sdk = { version = "20.0.0-rc2" }

soroban-workspace-contract-a-interface = { path = "contract_a_interface" }
soroban-workspace-contract-a = { path = "contract_a" }
soroban-workspace-token = { path = "token" }

[workspace.dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
