[package]
name = "core"
version.workspace = true
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false 

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
interface = { workspace = true }
pricefeed_core = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
interface = { workspace = true, features = ["testutils"] }
pricefeed_core = { workspace = true, features = ["testutils"] }