[package]
name = "token"
version.workspace = true
description = "Soroban standard token contract"
edition = "2021"
publish = false 

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true }